src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 15vmin;
  pointer-events: none;
}

.App-header {
  background-color: white;
  min-height: 20vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: #282c34;
}

.App-link {
  color: #61dafb;
}

input[type=text], input[type=number] {
  width: 80%;
  margin: 2px 10% 2px 10%;
  padding: 10px;
}

.error {
  color:red;
}

